--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <nav class="nav">
                     <a class="logo-header" href="./index.html">Web<span class="logo">Studio</span></a>
                     <ul class="nav-list">
-                        <li><a class="list-items" href="./index.html">Studio</a></li>
+                        <li class="studio-item"><a class="list-items" href="./index.html">Studio</a></li>
                         <li><a class="list-items" href="">Portfolio</a></li>
                         <li><a class="list-items" href="">Contacts</a></li>
                     </ul>
@@ -52,18 +52,22 @@
                         <h2 class="visually-hidden">Features</h2>
                         <ul class="list-features">
                             <li class="list-features-item">
+                                <svg class="icon" width="64" height="64"><use href="images/icons.svg#icon-antenna"></use></svg>
                                 <h3 class="strategy">Strategy</h3>
                                 <p class="paragraph">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
                             </li>
                             <li class="list-features-item">
+                                <svg class="icon"><use href="./images/icons.svg#icon-clock"></use></svg>
                                 <h3 class="strategy">Punctuality</h3>
                                 <p class="paragraph">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                             </li>
                             <li class="list-features-item">
+                                <svg class="icon"><use href="./images/icons.svg#icon-diagram"></use></svg>
                                 <h3 class="strategy">Diligence</h3>
                                 <p class="paragraph">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                             </li>
                             <li class="list-features-item">
+                                <svg class="icon"><use href="./images/icons.svg#icon-astronaut"></use></svg>
                                 <h3 class="strategy">Technologies</h3>
                                 <p class="paragraph">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                             </li>
@@ -81,6 +85,28 @@
                                 <div class="team-container">
                                     <h3 class="strategy team-header">Mark Guerrero</h3>
                                     <p class="paragraph team-paragraph">Product Designer</p>
+                                    <ul class="socials">
+                                        <li>
+                                            <svg class="social-items" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-instagram"></use>
+                                            </svg>
+                                        </li>
+                                        <li>
+                                            <svg class="social-items" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-twitter"></use>
+                                            </svg>
+                                        </li>
+                                        <li>
+                                            <svg class="social-items" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-facebook"></use>
+                                            </svg>
+                                        </li>
+                                        <li>
+                                            <svg class="social-items" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-linkedin"></use>
+                                            </svg>
+                                        </li>
+                                    </ul>
                                 </div>
                             </li>
                             <li class="team-list">
@@ -88,6 +114,28 @@
                                 <div class="team-container">
                                     <h3 class="strategy team-header">Tom Ford</h3>
                                     <p class="paragraph team-paragraph">Frontend Developer</p>
+                                    <ul class="socials">
+                                        <li>
+                                            <svg class="social-items" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-instagram"></use>
+                                            </svg>
+                                        </li>
+                                        <li>
+                                            <svg class="social-items" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-twitter"></use>
+                                            </svg>
+                                        </li>
+                                        <li>
+                                            <svg class="social-items" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-facebook"></use>
+                                            </svg>
+                                        </li>
+                                        <li>
+                                            <svg class="social-items" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-linkedin"></use>
+                                            </svg>
+                                        </li>
+                                    </ul>
                                 </div>
                             </li>
                             <li class="team-list">
@@ -95,6 +143,28 @@
                                 <div class="team-container">
                                     <h3 class="strategy team-header">Camila Garcia</h3>
                                     <p class="paragraph team-paragraph">Marketing</p>
+                                    <ul class="socials">
+                                        <li>
+                                            <svg class="social-items" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-instagram"></use>
+                                            </svg>
+                                        </li>
+                                        <li>
+                                            <svg class="social-items" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-twitter"></use>
+                                            </svg>
+                                        </li>
+                                        <li>
+                                            <svg class="social-items" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-facebook"></use>
+                                            </svg>
+                                        </li>
+                                        <li>
+                                            <svg class="social-items" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-linkedin"></use>
+                                            </svg>
+                                        </li>
+                                    </ul>
                                 </div>
                             </li>
                             <li class="team-list">
@@ -102,6 +172,28 @@
                                 <div class="team-container">
                                     <h3 class="strategy team-header">Daniel Wilson</h3>
                                     <p class="paragraph team-paragraph">UI Designer</p>
+                                    <ul class="socials">
+                                        <li>
+                                            <svg class="social-items" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-instagram"></use>
+                                            </svg>
+                                        </li>
+                                        <li>
+                                            <svg class="social-items" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-twitter"></use>
+                                            </svg>
+                                        </li>
+                                        <li>
+                                            <svg class="social-items" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-facebook"></use>
+                                            </svg>
+                                        </li>
+                                        <li>
+                                            <svg class="social-items" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-linkedin"></use>
+                                            </svg>
+                                        </li>
+                                    </ul>
                                 </div>
                             </li>
                         </ul>
@@ -163,7 +255,32 @@
         <footer class="footer">
             <div class="container">
                 <a class="logo-footer" href="./index.html">Web<span class="logo-footer-white">Studio</span></a>
-                <p class="paragraph">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+                <p class="footer-paragraph">Social media</p>
+                <div class="socials-footer">
+                    <p class="paragraph">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+                        <ul class="socials">
+                            <li>
+                                <svg class="social-items" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </li>
+                            <li>
+                                <svg class="social-items" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </li>
+                            <li>
+                                <svg class="social-items" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </li>
+                            <li>
+                                <svg class="social-items" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </li>
+                        </ul>
+                </div>
             </div>
         </footer>
     </div>  
