Initial before validation

--- a/index.html
+++ b/index.html
@@ -206,45 +206,48 @@
                         <h2 class="portfolio-header">Our Portfolio</h2>
                         <ul class="portfolio-menu"> 
                             <li class="list-portfolio">
-                                <img src="./images/img.jpg" alt="login page to banking app" width="360" height="420">
+                                <img src="./images/img.jpg" alt="login page to banking app" width="360" height="300">
                                 <div class="portfolio-container">
                                     <h3 class="strategy portfolio-subheader">Banking App</h3>
                                     <p class="paragraph portfolio-paragraph">App</p>
                                 </div>
                             </li>
-                            <li class="list-portfolio">
-                                <img src="./images/img-2.jpg" alt="wireless payment transaction" width="360" height="420">
+                            <li class="list-portfolio overlay-box">
+                                <div class="overlay">
+                                    <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                </div>
+                                <img src="./images/img-2.jpg" alt="wireless payment transaction" width="360" height="300">
                                 <div class="portfolio-container">
-                                    <h3 class="strategy portfolio-subheader">Banking App</h3>
+                                    <h3 class="strategy portfolio-subheader">Cashless Payment</h3>
+                                    <p class="paragraph portfolio-paragraph">Marketing</p>
+                                </div>
+                            </li>
+                            <li class="list-portfolio">
+                                <img src="./images/img-3.jpg" alt="laptop and smartphone in use for meditation" width="360" height="300">
+                                <div class="portfolio-container">
+                                    <h3 class="strategy portfolio-subheader">Mediation App</h3>
                                     <p class="paragraph portfolio-paragraph">App</p>
                                 </div>
                             </li>
                             <li class="list-portfolio">
-                                <img src="./images/img-3.jpg" alt="laptop and smartphone in use for meditation" width="360" height="420">
+                                <img src="./images/img-4.jpg" alt="heands on a car wheel" width="360" height="300">
                                 <div class="portfolio-container">
-                                    <h3 class="strategy portfolio-subheader">Banking App</h3>
-                                    <p class="paragraph portfolio-paragraph">App</p>
+                                    <h3 class="strategy portfolio-subheader">Taxi Service</h3>
+                                    <p class="paragraph portfolio-paragraph">Marketing</p>
                                 </div>
                             </li>
                             <li class="list-portfolio">
-                                <img src="./images/img-4.jpg" alt="heands on a car wheel" width="360" height="420">
+                                <img src="./images/img-5.jpg" alt="design visualization" width="360" height="300"> 
                                 <div class="portfolio-container">
-                                    <h3 class="strategy portfolio-subheader">Banking App</h3>
-                                    <p class="paragraph portfolio-paragraph">App</p>
+                                    <h3 class="strategy portfolio-subheader">Screen Illustrations</h3>
+                                    <p class="paragraph portfolio-paragraph">Design</p>
                                 </div>
                             </li>
                             <li class="list-portfolio">
-                                <img src="./images/img-5.jpg" alt="design visualization" width="360" height="420"> 
+                                <img src="./images/img-6.jpg" alt="a girl using smartphone" width="360" height="300">
                                 <div class="portfolio-container">
-                                    <h3 class="strategy portfolio-subheader">Banking App</h3>
-                                    <p class="paragraph portfolio-paragraph">App</p>
-                                </div>
-                            </li>
-                            <li class="list-portfolio">
-                                <img src="./images/img-6.jpg" alt="a girl using smartphone" width="360" height="420">
-                                <div class="portfolio-container">
-                                    <h3 class="strategy portfolio-subheader">Banking App</h3>
-                                    <p class="paragraph portfolio-paragraph">App</p>
+                                    <h3 class="strategy portfolio-subheader">Online Courses</h3>
+                                    <p class="paragraph portfolio-paragraph">Marketing</p>
                                 </div>
                             </li>
                         </ul>
