--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
                         <li class="address-list-item">
                             <a class="address-list" href="tel:+110001111111">+11 (000) 111-11-11</a>
                         </li>
-                        
                     </ul>
                 </address>
             </div>
@@ -62,7 +61,7 @@
                             </li>
                             <li class="list-features-item">
                                 <div class="svg-container">
-                                    <svg class="icon">
+                                    <svg class="icon" width="64" height="64">
                                         <use href="./images/icons.svg#icon-clock"></use>
                                     </svg>
                                 </div>
@@ -71,7 +70,7 @@
                             </li>
                             <li class="list-features-item">
                                 <div class="svg-container">
-                                    <svg class="icon">
+                                    <svg class="icon" width="64" height="64">
                                         <use href="./images/icons.svg#icon-diagram"></use>
                                     </svg>
                                 </div>
@@ -80,7 +79,7 @@
                             </li>
                             <li class="list-features-item">
                                 <div class="svg-container">
-                                    <svg class="icon">
+                                    <svg class="icon" width="64" height="64">
                                         <use href="./images/icons.svg#icon-astronaut"></use>
                                     </svg>
                                 </div>
@@ -104,7 +103,7 @@
                                     <ul class="socials">
                                         <li class="social-items">
                                             <a href="" class="social-link-section">
-                                                <svg width="16" height="16">
+                                                <svg class="social-items-svg" width="16" height="16">
                                                     <use href="./images/icons.svg#icon-instagram"></use>
                                                 </svg>
                                             </a>
@@ -112,21 +111,21 @@
                                         </li>
                                         <li class="social-items">
                                             <a href="" class="social-link-section">
-                                                <svg width="16" height="16">
+                                                <svg class="social-items-svg" width="16" height="16">
                                                     <use href="./images/icons.svg#icon-twitter"></use>
                                                 </svg>
                                             </a>
                                         </li>
                                         <li class="social-items">
                                             <a href="" class="social-link-section">
-                                                <svg width="16" height="16">
+                                                <svg class="social-items-svg" width="16" height="16">
                                                     <use href="./images/icons.svg#icon-facebook"></use>
                                                 </svg>
                                             </a>
                                         </li>
                                         <li class="social-items">
                                             <a href="" class="social-link-section">
-                                                <svg width="16" height="16">
+                                                <svg class="social-items-svg" width="16" height="16">
                                                     <use href="./images/icons.svg#icon-linkedin"></use>
                                                 </svg>
                                             </a>
@@ -329,29 +328,29 @@
             <p class="footer-paragraph">Social media</p>
             <ul class="socials">
                 <li class="social-items social-items-footer">
-                    <a href="" class="social-link-section">
-                        <svg width="16" height="16">
+                    <a href="" class="social-link-footer">
+                        <svg width="24" height="24">
                             <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="social-items social-items-footer">
-                    <a href="" class="social-link-section">
-                        <svg width="16" height="16">
+                    <a href="" class="social-link-footer">
+                        <svg width="24" height="24">
                             <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="social-items social-items-footer">
-                    <a href="" class="social-link-section">
-                        <svg width="16" height="16">
+                    <a href="" class="social-link-footer">
+                        <svg width="24" height="24">
                             <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="social-items social-items-footer">
-                    <a href="" class="social-link-section">
-                        <svg width="16" height="16">
+                    <a href="" class="social-link-footer">
+                        <svg width="24" height="24">
                             <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                     </a>
