--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                     </div>  
                 </section>
         </main>
-
+    
         <footer class="footer">
             <div class="container footer-container">
                 <div class="logo-container">
@@ -359,5 +359,6 @@
                 </div>
             </div>  
         </footer>
+    </div>
 </body>
 </html>
