--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                         <ul class="list-features">
                             <li class="list-features-item">
                                 <div class="svg-container">
-                                    <svg class="icon" width="64" height="64">
-                                        <use href="images/icons.svg#icon-antenna"></use>
+                                    <svg width="64" height="64">
+                                        <use href="./images/icons.svg#icon-antenna"></use>
                                     </svg>
                                 </div>
                                 <h3 class="strategy">Strategy</h3>
@@ -61,7 +61,7 @@
                             </li>
                             <li class="list-features-item">
                                 <div class="svg-container">
-                                    <svg class="icon" width="64" height="64">
+                                    <svg width="64" height="64">
                                         <use href="./images/icons.svg#icon-clock"></use>
                                     </svg>
                                 </div>
@@ -70,7 +70,7 @@
                             </li>
                             <li class="list-features-item">
                                 <div class="svg-container">
-                                    <svg class="icon" width="64" height="64">
+                                    <svg width="64" height="64">
                                         <use href="./images/icons.svg#icon-diagram"></use>
                                     </svg>
                                 </div>
@@ -79,7 +79,7 @@
                             </li>
                             <li class="list-features-item">
                                 <div class="svg-container">
-                                    <svg class="icon" width="64" height="64">
+                                    <svg width="64" height="64">
                                         <use href="./images/icons.svg#icon-astronaut"></use>
                                     </svg>
                                 </div>
