--- a/index.html
+++ b/index.html
@@ -329,28 +329,28 @@
                     <ul class="socials">
                         <li class="social-items social-items-footer">
                             <a href="" class="social-link-footer">
-                                <svg width="24" height="24">
+                                <svg class="icon" width="24" height="24">
                                     <use href="./images/icons.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-items social-items-footer">
                             <a href="" class="social-link-footer">
-                                <svg width="24" height="24">
+                                <svg class="icon" width="24" height="24">
                                     <use href="./images/icons.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-items social-items-footer">
                             <a href="" class="social-link-footer">
-                                <svg width="24" height="24">
+                                <svg class="icon" width="24" height="24">
                                     <use href="./images/icons.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-items social-items-footer">
                             <a href="" class="social-link-footer">
-                                <svg width="24" height="24">
+                                <svg class="icon" width="24" height="24">
                                     <use href="./images/icons.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
