--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                 </div>
                 <div class="socials-container">
                     <p class="footer-paragraph">Social media</p>
-                    <ul class="socials">
+                    <ul class="socials-footer">
                         <li class="social-items social-items-footer">
                             <a href="" class="social-link-footer">
                                 <svg class="icon" width="24" height="24">
